--- a/GenePlanet_Homework_Task_2.ipynb
+++ b/GenePlanet_Homework_Task_2.ipynb
@@ -18,16 +18,16 @@
     "\n",
     "While high-risk mutations (such as mutations in genes BRCA1 and BRCA2) can explain a small proportion of breast cancer cases, Genome Wide Association Studies (GWAS) have led to discovery that multiple common low-risk variants (single nucleotide polymorphisms - SNPs) can have a combined effect of increasing the individual's risk of developing breast cancer.\n",
     "\n",
-    "To get a better understanding of how the combined effects of low risk variants influence the risk of expression of a specific phenotype (in our case cancer), we calculate Polygenic Risk Score (PRS). PRS is a single value estimate of individual's propensity to a speficit phenotype. PRS is calculated as a sum of all individual's SNPs contributions for the specific phenotype. Each individual contribution is the effect size (log(odds ratio)) multiplied by the number of allells (0,1 or 2), based on which the odds ratio was caluclated. Odds ratio (OR) is a ratio of odds for expressing phenotype due to the individual SNP (nominator) and odds of not expressing that phenotype due to the same SNP (denominator).\n",
+    "To get a better understanding of how the combined effects of low risk variants influence the risk of expression of a specific phenotype (in our case cancer), we calculate Polygenic Risk Score (PRS). PRS is a single value estimate of the individual's propensity to a speficit phenotype. PRS is calculated as a sum of all individual SNP contributions for the specific phenotype. Each contribution is the effect size (log(odds ratio)) multiplied by the number of allells (0,1 or 2), based on which the odds ratio (OR) was caluclated. OR is a ratio of odds for expressing phenotype due to the individual SNP (nominator) and odds of not expressing that phenotype due to the same SNP (denominator).\n",
     "\n",
-    "The authors in the article* identified 77 SNP’s which contribute to the risk of developing breast cancer. They observed that individuals with the top 1% of PRS are 3 times as likely to develop breast cancer as individuals with the middle PRS.<br>The information to required to calculate the PRS is presented in the Table 4 (Supplmentary Material) and includes all SNPs and OR as well as allele information for each SNPs. The OR were calucalted based on the minor allele. <b>Based on this information we can calculate the PRS for any individual as long as we have the individuals 77 SNPs.</b>\n",
+    "The authors in the article* identified 77 SNPs which contribute to the risk of developing breast cancer. They observed that individuals with the top 1 % of PRS are 3 times as likely to develop breast cancer as individuals with the PRS value in the middle quantile.<br>The information required to calculate the PRS is presented in the Table 4 (Supplmentary Material) and includes all SNPs and ORs as well as allele information for each SNPs. The ORs were calculated based on the minor allele. <b>Based on this information we can calculate the PRS for any individual as long as we have the individuals 77 SNPs.</b>\n",
     "\n",
     "\n",
     "<h2>Getting the individual's SNPs</h2>\n",
     "    \n",
-    "Ensembl website has a collection of anonymous genomes of individuals. We are going to download the SNPs of anonymous female from Great Britain (sample name: <b><a href=\"http://www.internationalgenome.org/data-portal/sample/HG00099\">HG00099</a></b>), who was one of the participants in the 1000 genome project. We can obtain the sample number by browsing the Ensembl website.\n",
+    "Ensembl website has a collection of anonymous genomes of individuals. We are going to download the SNPs of the anonymous female from Great Britain (sample name: <b><a href=\"http://www.internationalgenome.org/data-portal/sample/HG00099\">HG00099</a></b>), who was one of the participants in the 1000G project. We can obtain the sample name by browsing the Ensembl website.\n",
     "\n",
-    "There are two ways to obtain the SNP’s for this sample. \n",
+    "There are two ways to obtain the SNPs for this sample. \n",
     "1. From Ensembl website we can download many VCF files that combined contain all the 77 SNPs. We then filter each file based on the specific sample name.\n",
     "\n",
     "2. We can communicate with Ensembl database through their API. We create a script that can query the database for each SNP. We receive all the samples for specific SNP in JSON format which we then parse for specific sample name.\n",
@@ -35,7 +35,7 @@
     "While both options have pros and cons we chose the option 2 (the script is located in the <b>ensembl_util.py</b>).<br> \n",
     "This option is internet depended as it does not store information locally. However as long as we have access to the database we can retrieve the latest Ensembl information at any time and we do not need to worry about storing/losing the information locally.\n",
     "\n",
-    "Right now the script returns only SNPs for the individual sample. However we can expand the script to retrive any information that is stored in the Ensembl database. \n"
+    "<i>Right now the script returns only SNPs for the individual sample. However we can expand the script to retrive any information that is stored in the Ensembl database.</i>\n"
    ]
   },
   {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "rs10069690               0.9948               1.1200  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -322,20 +322,20 @@
       "[INFO] Collecting (75/77): rs6678914\n",
       "[INFO] Collecting (76/77): rs12710696\n",
       "[INFO] Collecting (77/77): rs11075995\n",
-      "[INFO] SNPs for the sample collected in 197.0\n"
+      "[INFO] SNPs for the sample collected in 189.0\n"
      ]
     }
    ],
    "source": [
-    "# Getting the 77 SNP's of anonymous female individual\n",
+    "# Getting the 77 SNPs of anonymous female individual\n",
     "# from Ensembl database (Individual HG00099 (Female) EUR, GBR), found\n",
     "# by browsing the Ensemble database.\n",
     "# http://www.internationalgenome.org/data-portal/sample/HG00099\n",
     "\n",
     "\n",
-    "# we call our custom function that connects to the Ensemble database\n",
+    "# we call our custom function that queries the Ensemble database\n",
     "# and returns the SNPs. We supply function with the list of SNPs and sample name.\n",
-    "# df.index is the list of all SNPS from the above table\n",
+    "# (df.index is the list of all SNPS from the above table)\n",
     "ind_snps = ensembl_utils.ensembl_snp_collector(df.index, \"HG00099\") "
    ]
   },
@@ -343,12 +343,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Calcualte PRS for the sample</h3>"
+    "<h3>Calculate PRS for the sample</h3>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -464,13 +464,13 @@
        "rs10069690               0.9948               1.1200    C|C  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Append Individual Allelles column to the Table\n",
+    "# Append Sample's Allelles column to the Table\n",
     "df['SAMPLE'] = pd.DataFrame([ind_snps[\"snps\"]]).T\n",
     "\n",
     "# showing first 5 rows of the Table with indcluded SAMPLE allells column\n",
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "rs11075995               1.0204               1.1016    T|T    2  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,9 +616,10 @@
     "# Get the X_k (either 0,1,2)\n",
     "X_k = {}\n",
     "for row in df.index:\n",
-    "    #get minor allele\n",
+    "    # get minor allele\n",
     "    ref = df.loc[row].Alleles.split(\"/\")[-1]\n",
     "    sample = df.loc[row].SAMPLE.split(\"|\")\n",
+    "    # count occurances of the minor allele in the sample\n",
     "    X_k[row] = sample.count(ref)\n",
     "\n",
     "# Append X_k to the Table 4\n",
@@ -651,9 +652,9 @@
     "PRS_ER_neg = 0\n",
     "PRS_ER_pos = 0\n",
     "\n",
-    "# iterating over each row in the table and summing the contribution of each SNP\n",
-    "# to obtain the final PRS score (based on the PRS equation)\n",
-    "# (np.log is base 2 logarithm function)\n",
+    "# Iterating over each row in the table and summing the contribution of each SNP\n",
+    "# to obtain the final PRS (based on the PRS equation).\n",
+    "# (np.log() is base 2 logarithm function)\n",
     "\n",
     "for row in df.index:\n",
     "    PRS_all += np.log(df.loc[row][\"All breast cancers\"])*df.loc[row][\"X_k\"]\n",
