--- a/GenePlanet_Homework_Task_2.ipynb
+++ b/GenePlanet_Homework_Task_2.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "While high-risk mutations (such as mutations in genes BRCA1 and BRCA2) can explain a small proportion of breast cancer cases, Genome Wide Association Studies (GWAS) have led to discovery that multiple common low-risk variants (single nucleotide polymorphisms - SNPs) can have a combined effect of increasing the individual's risk of developing breast cancer.\n",
     "\n",
-    "To get a better understanding of how the combined effects of low risk variants influence the risk of expression of a specific phenotype (in our case cancer), we calculate Polygenic Risk Score (PRS). PRS is a single value estimate of the individual's propensity to a speficit phenotype. PRS is calculated as a sum of all individual SNP contributions for the specific phenotype. Each contribution is the effect size (log(odds ratio)) multiplied by the number of allells (0,1 or 2), based on which the odds ratio (OR) was caluclated. OR is a ratio of odds for expressing phenotype due to the individual SNP (nominator) and odds of not expressing that phenotype due to the same SNP (denominator).\n",
+    "To get a better understanding of how the combined effects of low risk variants influence the risk of expression of a specific phenotype (in our case cancer), we calculate Polygenic Risk Score (PRS). PRS is a single value estimate of the individual's propensity to a speficit phenotype. PRS is calculated as a sum of all individual SNP contributions for the specific phenotype. Each contribution is the effect size (log(odds ratio)) multiplied by the number of matching allels (0,1 or 2) in the SNP, based on which the odds ratio (OR) was caluclated. OR is a ratio of odds for expressing phenotype due to the individual SNP (nominator) and odds of not expressing that phenotype due to the same SNP (denominator).\n",
     "\n",
     "The authors in the article* identified 77 SNPs which contribute to the risk of developing breast cancer. They observed that individuals with the top 1 % of PRS are 3 times as likely to develop breast cancer as individuals with the PRS value in the middle quantile.<br>The information required to calculate the PRS is presented in the Table 4 (Supplmentary Material) and includes all SNPs and ORs as well as allele information for each SNPs. The ORs were calculated based on the minor allele. <b>Based on this information we can calculate the PRS for any individual as long as we have the individuals 77 SNPs.</b>\n",
     "\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "rs10069690               0.9948               1.1200  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -322,7 +322,7 @@
       "[INFO] Collecting (75/77): rs6678914\n",
       "[INFO] Collecting (76/77): rs12710696\n",
       "[INFO] Collecting (77/77): rs11075995\n",
-      "[INFO] SNPs for the sample collected in 189.0\n"
+      "[INFO] SNPs for the sample collected in 206.0\n"
      ]
     }
    ],
@@ -333,7 +333,7 @@
     "# http://www.internationalgenome.org/data-portal/sample/HG00099\n",
     "\n",
     "\n",
-    "# we call our custom function that queries the Ensemble database\n",
+    "# we call our custom function that queries the Ensembl database\n",
     "# and returns the SNPs. We supply function with the list of SNPs and sample name.\n",
     "# (df.index is the list of all SNPS from the above table)\n",
     "ind_snps = ensembl_utils.ensembl_snp_collector(df.index, \"HG00099\") "
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "rs10069690               0.9948               1.1200    C|C  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "rs11075995               1.0204               1.1016    T|T    2  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
     "# xk - the number of alleles for the same SNP (0, 1 or 2)\n",
     "# n - number of SNPs (len(df.index) = 77)\n",
     "\n",
-    "# Get the X_k (either 0,1,2)\n",
+    "# Get the X_k (either 0,1 or 2)\n",
     "X_k = {}\n",
     "for row in df.index:\n",
     "    # get minor allele\n",
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
