--- a/GenePlanet_Homework_Task_2.ipynb
+++ b/GenePlanet_Homework_Task_2.ipynb
@@ -33,7 +33,7 @@
     "2. We can communicate with Ensembl database through their API. We create a script that can query the database for each SNP. We receive all the samples for specific SNP in JSON format which we then parse for specific sample name.\n",
     "\n",
     "While both options have pros and cons we chose the option 2 (the script is located in the <b>ensembl_util.py</b>).<br> \n",
-    "This option is internet depended as it does not store information locally. However as long as we have access to the database we can retrieve the latest Ensembl information at any time and we do not need to worry about storing/losing the information locally.\n",
+    "This option is internet dependent as it does not store information locally. However as long as we have access to the database we can retrieve the latest Ensembl information at any time and we do not need to worry about storing/losing the information locally.\n",
     "\n",
     "<i>Right now the script returns only SNPs for the individual sample. However we can expand the script to retrive any information that is stored in the Ensembl database.</i>\n"
    ]
@@ -654,7 +654,7 @@
     "\n",
     "# Iterating over each row in the table and summing the contribution of each SNP\n",
     "# to obtain the final PRS (based on the PRS equation).\n",
-    "# (np.log() is base 2 logarithm function)\n",
+    "# (np.log() is base e logarithm function)\n",
     "\n",
     "for row in df.index:\n",
     "    PRS_all += np.log(df.loc[row][\"All breast cancers\"])*df.loc[row][\"X_k\"]\n",
